--- a/extra-tests/classes/RollupCalculatorTests.cls
+++ b/extra-tests/classes/RollupCalculatorTests.cls
@@ -854,13 +854,11 @@ private class RollupCalculatorTests {
 
     RollupCurrencyInfo mockUsdInfo = new RollupCurrencyInfo();
     mockUsdInfo.ConversionRate = 1;
-    mockUsdInfo.DecimalPlaces = 2;
     mockUsdInfo.IsoCode = 'USD';
     RollupCurrencyInfo mockEurInfo = new RollupCurrencyInfo();
     mockEurInfo.ConversionRate = .64;
-    mockEurInfo.DecimalPlaces = 2;
     mockEurInfo.IsoCode = 'EUR';
-    RollupCurrencyInfo.mockCurrencyData = new List<RollupCurrencyInfo>{ mockUsdInfo, mockEurInfo };
+    RollupCurrencyInfo.mockBasicCurrencies = new List<RollupCurrencyInfo>{ mockUsdInfo, mockEurInfo };
 
     RollupCalculator calc = getCalculator(
       1.5625,
