--- a/rollup/core/classes/RollupCurrencyInfo.cls
+++ b/rollup/core/classes/RollupCurrencyInfo.cls
@@ -1,29 +1,77 @@
+@SuppressWarnings('PMD.ExcessiveParameterList,PMD.PropertyNamingConventions')
 public without sharing virtual class RollupCurrencyInfo {
   public static final String CURRENCY_ISO_CODE_FIELD_NAME = 'CurrencyIsoCode';
-
-  @TestVisible
-  private static List<RollupCurrencyInfo> mockCurrencyData;
+  private static final RollupRepository REPOSITORY = new RollupRepository(RollupRepository.RunAsMode.SYSTEM_LEVEL);
   private static final Map<String, SObject> TRANSFORMED_MULTICURRENCY_CALC_ITEMS = new Map<String, SObject>();
   private static final Set<String> HASHED_ITEM_VALUES = new Set<String>();
-  private static Date minDatedCurrencyLookup = Date.newInstance(System.today().year(), 1, 1).addYears(-1);
-  private static Date maxDatedCurrencyLookup = System.today().addYears(1);
+
+  @TestVisible
+  private static List<RollupCurrencyInfo> mockBasicCurrencies;
+  @TestVisible
+  private static List<RollupCurrencyInfo> mockDatedCurrencies;
+
   @TestVisible
   private static Boolean hasLoadedDatedCurrencyInfo = false;
 
-  private static final RollupRepository REPOSITORY = new RollupRepository(RollupRepository.RunAsMode.SYSTEM_LEVEL);
+  private static Date minDatedCurrencyLookup {
+    get {
+      minDatedCurrencyLookup = minDatedCurrencyLookup ?? Date.newInstance(System.today().year(), 1, 1).addYears(-1);
+      return minDatedCurrencyLookup;
+    }
+    set;
+  }
 
-  @TestVisible
-  private static Boolean IS_DATED_MULTICURRENCY = false;
+  private static Date maxDatedCurrencyLookup {
+    get {
+      maxDatedCurrencyLookup = maxDatedCurrencyLookup ?? System.today().addYears(1);
+      return maxDatedCurrencyLookup;
+    }
+    set;
+  }
+
+  private static Date maxStartDate {
+    get {
+      maxStartDate = maxStartDate ?? Date.newInstance(9999, 12, 31);
+      return minStartDate;
+    }
+    set;
+  }
+
+  private static Date minStartDate {
+    get {
+      // this is a sad one - the actual date for the FIRST dated currency record is recorded as 0000-12-30
+      // but this ACTUALLY instantiates a Date with the value 0001-12-30, so we have to use <= when
+      // doing the initial comparison because there's no other way to actually "reach" that date comparitively (that I know of)
+      minStartDate = minStartDate ?? Date.newInstance(0, 12, 30);
+      return minStartDate;
+    }
+    set;
+  }
 
   // Can't be Schema.SObjectType => Schema.SObjectField because not all orgs have OppLineItems/Splits
   // technically there's a hierarchy for OpportunityLineItem that goes Opportunity.CloseDate > ServiceDate > (ProductDate || ScheduleDate)
   // but because this can be configured on a per-rollup basis, it's fine to leave Opportunity.CloseDate as the default since it can be overridden
-  private static final Map<String, List<String>> DATED_MULTICURRENCY_SUPPORTED_OBJECTS = new Map<String, List<String>>{
-    'Opportunity' => new List<String>{ 'CloseDate' },
-    'OpportunityLineItem' => new List<String>{ 'ServiceDate' },
-    'OpportunityLineItemSchedule' => new List<String>{ 'ScheduleDate' },
-    'OpportunitySplit' => new List<String>{ 'Opportunity', 'CloseDate' }
-  };
+  private static final Map<String, List<String>> DATED_MULTICURRENCY_SUPPORTED_OBJECTS {
+    get {
+      DATED_MULTICURRENCY_SUPPORTED_OBJECTS = DATED_MULTICURRENCY_SUPPORTED_OBJECTS ??
+        new Map<String, List<String>>{
+          'Opportunity' => new List<String>{ 'CloseDate' },
+          'OpportunityLineItem' => new List<String>{ 'ServiceDate' },
+          'OpportunityLineItemSchedule' => new List<String>{ 'ScheduleDate' },
+          'OpportunitySplit' => new List<String>{ 'Opportunity', 'CloseDate' }
+        };
+      return DATED_MULTICURRENCY_SUPPORTED_OBJECTS;
+    }
+    set;
+  }
+
+  private static final Set<String> DATED_CURRENCY_QUERIES {
+    get {
+      DATED_CURRENCY_QUERIES = DATED_CURRENCY_QUERIES ?? new Set<String>();
+      return DATED_CURRENCY_QUERIES;
+    }
+    set;
+  }
 
   @TestVisible
   private static Boolean IS_MULTICURRENCY {
@@ -36,7 +84,7 @@ public without sharing virtual class RollupCurrencyInfo {
 
   private static final RollupCurrencyInfo FALLBACK_INFO {
     get {
-      FALLBACK_INFO = FALLBACK_INFO ?? new RollupCurrencyInfo().setDefaults(1, 2);
+      FALLBACK_INFO = FALLBACK_INFO ?? new RollupCurrencyInfo().setDefaults(1);
       return FALLBACK_INFO;
     }
     set;
@@ -60,21 +108,38 @@ public without sharing virtual class RollupCurrencyInfo {
 
   public String IsoCode { get; set; }
   public Decimal ConversionRate { get; set; }
-  public Integer DecimalPlaces { get; set; }
   // next two fields only available for DatedConversionRate-based RollupCurrencyInfos
   public Date StartDate { get; set; }
   public Date NextStartDate { get; set; }
+
+  public virtual override String toString() {
+    return this.getTypeName() +
+      ':[' +
+      JSON.serialize(
+        new Map<String, Object>{
+          'IsoCode' => this.IsoCode,
+          'ConversionRate' => this.ConversionRate,
+          'StartDate' => this.StartDate,
+          'NextStartDate' => this.NextStartDate
+        }
+      ) +
+      ']';
+  }
+
+  protected virtual String getTypeName() {
+    return 'RollupCurrencyInfo';
+  }
 
   protected virtual RollupCurrencyInfo getInfo(SObject calcItem, String isoCode) {
     return this;
   }
 
+  @SuppressWarnings('PMD.EmptyStatementBlock')
   protected virtual void addInfo(RollupCurrencyInfo info) {
   }
 
-  private RollupCurrencyInfo setDefaults(Decimal conversionRate, Integer decimalPlaces) {
-    this.conversionRate = conversionRate;
-    this.DecimalPlaces = decimalPlaces;
+  private RollupCurrencyInfo setDefaults(Decimal conversionRate) {
+    this.ConversionRate = conversionRate;
     return this;
   }
 
@@ -137,7 +202,7 @@ public without sharing virtual class RollupCurrencyInfo {
   }
 
   private static void loadProperMinMaxDates(List<SObject> calcItems, Schema.SObjectField rollupField) {
-    if (hasLoadedDatedCurrencyInfo || CURRENCY_ISO_CODE_TO_CURRENCY == null || rollupField.getDescribe().getType() != Schema.DisplayType.CURRENCY) {
+    if (CURRENCY_ISO_CODE_TO_CURRENCY == null || rollupField.getDescribe().getType() != Schema.DisplayType.CURRENCY) {
       return;
     }
     for (SObject calcItem : calcItems) {
@@ -151,17 +216,41 @@ public without sharing virtual class RollupCurrencyInfo {
         maxDatedCurrencyLookup = currencyDate.date();
       }
     }
-
     hasLoadedDatedCurrencyInfo = true;
-    REPOSITORY.setQuery(
-        'SELECT IsoCode, ConversionRate, StartDate, NextStartDate FROM DatedConversionRate WHERE StartDate >= :minDatedCurrencyLookup AND NextStartDate <= :maxDatedCurrencyLookup'
-      )
-      .setArg('minDatedCurrencyLookup', minDatedCurrencyLookup)
-      .setArg('maxDatedCurrencyLookup', maxDatedCurrencyLookup);
-    List<RollupCurrencyInfo> datedCurrencyInfos = (List<RollupCurrencyInfo>) JSON.deserialize(JSON.serialize(REPOSITORY.get()), List<RollupCurrencyInfo>.class);
-    IS_DATED_MULTICURRENCY = datedCurrencyInfos.isEmpty() == false;
-    mapCurrencies(CURRENCY_ISO_CODE_TO_CURRENCY, datedCurrencyInfos);
-    IS_DATED_MULTICURRENCY = false;
+
+    String datedCurrencyQuery = 'SELECT IsoCode, ConversionRate, StartDate, NextStartDate FROM DatedConversionRate WHERE (NextStartDate <= :maxDatedCurrencyLookup OR NextStartDate = :maxStartDate) AND (StartDate < :minStartDate OR StartDate >= :minDatedCurrencyLookup)';
+    String hashedCurrencyQuery = datedCurrencyQuery + minDatedCurrencyLookup + maxDatedCurrencyLookup;
+
+    if (DATED_CURRENCY_QUERIES.contains(hashedCurrencyQuery)) {
+      return;
+    } else {
+      DATED_CURRENCY_QUERIES.add(hashedCurrencyQuery);
+    }
+
+    REPOSITORY.setArg('minDatedCurrencyLookup', minDatedCurrencyLookup)
+      .setArg('maxDatedCurrencyLookup', maxDatedCurrencyLookup)
+      .setArg('minStartDate', minStartDate)
+      .setArg('maxStartDate', maxStartDate);
+    List<RollupCurrencyInfo> datedCurrencyInfos = getCurrencies(datedCurrencyQuery);
+
+    // first loop - transform any existing matches into CurrencyFinder instances
+    for (RollupCurrencyInfo datedInfo : datedCurrencyInfos) {
+      RollupCurrencyInfo possiblyMatchingInfo = CURRENCY_ISO_CODE_TO_CURRENCY.get(datedInfo.IsoCode);
+      if (possiblyMatchingInfo != null && (possiblyMatchingInfo instanceof CurrencyFinder) == false) {
+        possiblyMatchingInfo = new CurrencyFinder(possiblyMatchingInfo);
+        CURRENCY_ISO_CODE_TO_CURRENCY.put(datedInfo.IsoCode, possiblyMatchingInfo);
+      }
+    }
+    // second loop - populate the rest
+    for (RollupCurrencyInfo datedInfo : datedCurrencyInfos) {
+      RollupCurrencyInfo possiblyMatchingInfo = CURRENCY_ISO_CODE_TO_CURRENCY.get(datedInfo.IsoCode);
+      if (possiblyMatchingInfo == null) {
+        possiblyMatchingInfo = new CurrencyFinder(datedInfo);
+        CURRENCY_ISO_CODE_TO_CURRENCY.put(datedInfo.IsoCode, possiblyMatchingInfo);
+      } else if ((datedInfo instanceof CurrencyFinder) == false) {
+        possiblyMatchingInfo.addInfo(datedInfo);
+      }
+    }
   }
 
   private static void actuallyTransformCurrency(
@@ -216,11 +305,10 @@ public without sharing virtual class RollupCurrencyInfo {
 
     Decimal calcItemDenominator = (Decimal) calcItem.get(fieldOnCalcItem);
     if (calcItemDenominator != null) {
-      Decimal calcItemAmountInOrgCurrency =
-        CURRENCY_ISO_CODE_TO_CURRENCY.get(calcItemIsoCode).getInfo(calcItem, calcItemIsoCode).ConversionRate / calcItemDenominator;
-      Double calcItemAmountInParentCurrency = (CURRENCY_ISO_CODE_TO_CURRENCY.get(parentIsoCode).getInfo(calcItem, parentIsoCode).ConversionRate /
-        calcItemAmountInOrgCurrency)
-        .doubleValue();
+      RollupCurrencyInfo childCurrencyInfo = CURRENCY_ISO_CODE_TO_CURRENCY.get(calcItemIsoCode).getInfo(calcItem, calcItemIsoCode);
+      RollupCurrencyInfo parentCurrencyInfo = CURRENCY_ISO_CODE_TO_CURRENCY.get(parentIsoCode).getInfo(calcItem, parentIsoCode);
+      Decimal calcItemAmountInOrgCurrency = childCurrencyInfo.ConversionRate / calcItemDenominator;
+      Double calcItemAmountInParentCurrency = (parentCurrencyInfo?.ConversionRate / calcItemAmountInOrgCurrency)?.doubleValue();
       Map<String, Schema.SObjectField> fieldNameToField = TYPE_TO_FIELDS.get(calcItem.getSObjectType());
       if (fieldNameToField == null) {
         fieldNameToField = calcItem.getSObjectType().getDescribe(SObjectDescribeOptions.DEFERRED).fields.getMap();
@@ -238,28 +326,29 @@ public without sharing virtual class RollupCurrencyInfo {
   }
 
   private static Map<String, RollupCurrencyInfo> getCurrencyMap() {
-    List<RollupCurrencyInfo> currencyInfos = new List<RollupCurrencyInfo>();
-    if (mockCurrencyData != null) {
-      currencyInfos.addAll(mockCurrencyData);
-    } else {
-      if (IS_MULTICURRENCY) {
-        String query = 'SELECT IsoCode, ConversionRate, DecimalPlaces FROM CurrencyType WHERE IsActive = TRUE';
-        currencyInfos.addAll((List<RollupCurrencyInfo>) JSON.deserialize(JSON.serialize(REPOSITORY.setQuery(query).get()), List<RollupCurrencyInfo>.class));
-      }
-    }
+    List<RollupCurrencyInfo> currencyInfos = getCurrencies('SELECT IsoCode, ConversionRate, DecimalPlaces FROM CurrencyType WHERE IsActive = TRUE');
     Map<String, RollupCurrencyInfo> currencyInfoMap = new Map<String, RollupCurrencyInfo>();
     mapCurrencies(currencyInfoMap, currencyInfos);
     return currencyInfoMap;
   }
 
+  private static List<RollupCurrencyInfo> getCurrencies(String query) {
+    List<RollupCurrencyInfo> currencyInfos = new List<RollupCurrencyInfo>();
+    if (mockBasicCurrencies != null) {
+      currencyInfos.addAll(mockBasicCurrencies);
+      mockBasicCurrencies = null;
+    } else if (mockDatedCurrencies != null) {
+      currencyInfos.addAll(mockDatedCurrencies);
+      mockDatedCurrencies = null;
+    } else if (IS_MULTICURRENCY) {
+      currencyInfos.addAll((List<RollupCurrencyInfo>) JSON.deserialize(JSON.serialize(REPOSITORY.setQuery(query).get()), List<RollupCurrencyInfo>.class));
+    }
+    return currencyInfos;
+  }
+
   private static void mapCurrencies(Map<String, RollupCurrencyInfo> currencyInfoMap, List<RollupCurrencyInfo> currencyInfos) {
     for (RollupCurrencyInfo currencyInfo : currencyInfos) {
-      RollupCurrencyInfo mappedInfo = currencyInfoMap.get(currencyInfo.IsoCode);
-      if (mappedInfo == null) {
-        mappedInfo = IS_DATED_MULTICURRENCY ? new CurrencyFinder(currencyInfo) : currencyInfo;
-        currencyInfoMap.put(currencyInfo.IsoCode, mappedInfo);
-      }
-      mappedInfo.addInfo(currencyInfo);
+      currencyInfoMap.put(currencyInfo.IsoCode, currencyInfo);
     }
   }
 
@@ -311,6 +400,14 @@ public without sharing virtual class RollupCurrencyInfo {
       }
       cachedItemToInfo.put(calcItem.Id, this.baseInfo);
       return this.baseInfo;
+    }
+
+    public override String toString() {
+      return this.getTypeName() + '[' + this.baseInfo + '\n\t\t:' + this.currencyInfos + ']';
+    }
+
+    protected override String getTypeName() {
+      return 'CurrencyFinder';
     }
   }
 }
