Adds additional RollupCurrencyInfo tests

--- a/extra-tests/classes/RollupCurrencyInfoTests.cls
+++ b/extra-tests/classes/RollupCurrencyInfoTests.cls
@@ -183,8 +183,8 @@ private class RollupCurrencyInfoTests {
     eurPeriodTwo.NextStartDate = System.today().addDays(1);
 
     RollupCurrencyInfo unusedStandardEurPeriod = new RollupCurrencyInfo();
-    eurPeriodTwo.ConversionRate = 1.5;
-    eurPeriodTwo.IsoCode = 'EUR';
+    unusedStandardEurPeriod.ConversionRate = 1;
+    unusedStandardEurPeriod.IsoCode = 'EUR';
 
     RollupCurrencyInfo.mockBasicCurrencies = new List<RollupCurrencyInfo>{ unusedStandardEurPeriod };
     RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ usdInfo, eurPeriodOne, eurPeriodTwo };
@@ -219,18 +219,19 @@ private class RollupCurrencyInfoTests {
     usdInfo.StartDate = Date.newInstance(0, 12, 30);
     usdInfo.NextStartDate = Date.newInstance(9999, 12, 31);
     RollupCurrencyInfo eurPeriodOne = new RollupCurrencyInfo();
-    eurPeriodOne.ConversionRate = 1.1;
+    eurPeriodOne.ConversionRate = 2;
     eurPeriodOne.IsoCode = 'EUR';
     eurPeriodOne.StartDate = System.today().addDays(-10);
     eurPeriodOne.NextStartDate = System.today().addDays(-5);
     RollupCurrencyInfo eurPeriodTwo = new RollupCurrencyInfo();
-    eurPeriodTwo.ConversionRate = 1.2;
+    eurPeriodTwo.ConversionRate = 1;
     eurPeriodTwo.IsoCode = 'EUR';
     eurPeriodTwo.StartDate = Date.newInstance(0, 12, 30);
-    eurPeriodTwo.NextStartDate = System.today().addDays(-10);
-    RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ usdInfo, eurPeriodOne };
-    Opportunity opp = new Opportunity(StageName = 'a', CloseDate = System.today().addDays(-7), Name = 'One', Amount = 14);
-    Opportunity secondOpp = new Opportunity(StageName = 'a', CloseDate = System.today().addYears(-7), Name = 'One', Amount = 14);
+    eurPeriodTwo.NextStartDate = eurPeriodOne.StartDate;
+    RollupCurrencyInfo.mockBasicCurrencies = new List<RollupCurrencyInfo>{ usdInfo };
+    RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ eurPeriodOne };
+    Opportunity opp = new Opportunity(StageName = 'a', CloseDate = eurPeriodOne.StartDate.addDays(2), Name = 'One', Amount = 10);
+    Opportunity secondOpp = new Opportunity(StageName = 'b', CloseDate = eurPeriodOne.StartDate.addYears(-7), Name = 'Two', Amount = 10);
     insert new List<Opportunity>{ opp, secondOpp };
     opp = (Opportunity) RollupTestUtils.queryRecord(opp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
     secondOpp = (Opportunity) RollupTestUtils.queryRecord(secondOpp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
@@ -238,11 +239,74 @@ private class RollupCurrencyInfoTests {
     RollupCurrencyInfo.transform(new List<Opportunity>{ opp }, Opportunity.Amount, eurPeriodOne.IsoCode, new List<RollupOrderBy__mdt>());
 
     opp = (Opportunity) RollupCurrencyInfo.getCalcItem(opp, eurPeriodOne.IsoCode);
-    System.assertEquals(15.4, opp.Amount);
+    System.assertEquals(20, opp.Amount);
 
-    RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ usdInfo, eurPeriodOne, eurPeriodTwo };
+    RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ eurPeriodOne, eurPeriodTwo };
     RollupCurrencyInfo.transform(new List<Opportunity>{ secondOpp }, Opportunity.Amount, eurPeriodOne.IsoCode, new List<RollupOrderBy__mdt>());
     secondOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(secondOpp, eurPeriodOne.IsoCode);
-    System.assertEquals(16.8, secondOpp.Amount);
+    System.assertEquals(10, secondOpp.Amount);
+  }
+
+  @IsTest
+  static void multipleDateRangesContinueToWork() {
+    if (RollupCurrencyInfo.isMultiCurrency() == false) {
+      return;
+    }
+
+    RollupCurrencyInfo usdInfo = new RollupCurrencyInfo();
+    usdInfo.ConversionRate = 1;
+    usdInfo.IsoCode = 'USD';
+    // default dated currency range - all time
+    usdInfo.StartDate = Date.newInstance(0, 12, 30);
+    usdInfo.NextStartDate = Date.newInstance(9999, 12, 31);
+    RollupCurrencyInfo.mockBasicCurrencies = new List<RollupCurrencyInfo>{ usdInfo };
+
+    RollupCurrencyInfo eurPeriodOne = new RollupCurrencyInfo();
+    eurPeriodOne.ConversionRate = 1;
+    eurPeriodOne.IsoCode = 'EUR';
+    eurPeriodOne.StartDate = usdInfo.StartDate;
+    eurPeriodOne.NextStartDate = System.today().addYears(-10);
+    RollupCurrencyInfo eurPeriodTwo = new RollupCurrencyInfo();
+    eurPeriodTwo.ConversionRate = 2;
+    eurPeriodTwo.IsoCode = 'EUR';
+    eurPeriodTwo.StartDate = eurPeriodOne.NextStartDate;
+    eurPeriodTwo.NextStartDate = eurPeriodTwo.StartDate.addYears(3);
+    RollupCurrencyInfo eurPeriodThree = new RollupCurrencyInfo();
+    eurPeriodThree.ConversionRate = 3;
+    eurPeriodThree.IsoCode = 'EUR';
+    eurPeriodThree.StartDate = eurPeriodTwo.NextStartDate;
+    eurPeriodThree.NextStartDate = eurPeriodThree.StartDate.addYears(3);
+    RollupCurrencyInfo eurPeriodFour = new RollupCurrencyInfo();
+    eurPeriodFour.ConversionRate = 4;
+    eurPeriodFour.IsoCode = 'EUR';
+    eurPeriodFour.StartDate = eurPeriodThree.NextStartDate;
+    eurPeriodFour.NextStartDate = System.today().addYears(10);
+    RollupCurrencyInfo.mockDatedCurrencies = new List<RollupCurrencyInfo>{ eurPeriodOne, eurPeriodTwo, eurPeriodThree, eurPeriodFour };
+
+    Opportunity opp = new Opportunity(StageName = 'a', CloseDate = eurPeriodOne.NextStartDate.addDays(-2), Name = 'One', Amount = 10);
+    Opportunity secondOpp = new Opportunity(StageName = 'b', CloseDate = eurPeriodTwo.StartDate.addDays(1), Name = 'Two', Amount = 10);
+    Opportunity thirdOpp = new Opportunity(StageName = 'c', CloseDate = eurPeriodThree.StartDate.addDays(1), Name = 'Three', Amount = 10);
+    Opportunity fourthOpp = new Opportunity(StageName = 'd', CloseDate = eurPeriodFour.StartDate.addDays(1), Name = 'Four', Amount = 10);
+    insert new List<Opportunity>{ opp, secondOpp, thirdOpp, fourthOpp };
+    opp = (Opportunity) RollupTestUtils.queryRecord(opp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
+    secondOpp = (Opportunity) RollupTestUtils.queryRecord(secondOpp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
+    thirdOpp = (Opportunity) RollupTestUtils.queryRecord(thirdOpp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
+    fourthOpp = (Opportunity) RollupTestUtils.queryRecord(fourthOpp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
+
+    RollupCurrencyInfo.transform(
+      new List<Opportunity>{ opp, secondOpp, thirdOpp, fourthOpp },
+      Opportunity.Amount,
+      eurPeriodOne.IsoCode,
+      new List<RollupOrderBy__mdt>()
+    );
+
+    opp = (Opportunity) RollupCurrencyInfo.getCalcItem(opp, eurPeriodOne.IsoCode);
+    Assert.areEqual(10, opp.Amount);
+    secondOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(secondOpp, eurPeriodOne.IsoCode);
+    Assert.areEqual(20, secondOpp.Amount);
+    thirdOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(thirdOpp, eurPeriodOne.IsoCode);
+    Assert.areEqual(30, thirdOpp.Amount);
+    fourthOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(fourthOpp, eurPeriodOne.IsoCode);
+    Assert.areEqual(40, fourthOpp.Amount);
   }
 }
